--- a/package.json
+++ b/package.json
@@ -2,17 +2,32 @@
   "name": "stylis-plugin-rtl",
   "version": "2.1.1",
   "description": "Fork of stylis-rtl, uses cssjanus under the hood to flip style orientations for RTL",
-  "module": "dist/stylis-rtl.js",
-  "main": "dist/cjs/stylis-rtl.js",
-  "types": "dist/stylis-rtl.d.ts",
+  "type": "module",
+  "module": "esm/stylis-rtl.js",
+  "main": "cjs/stylis-rtl.js",
+  "types": "cjs/stylis-rtl.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./esm/stylis-rtl.d.ts",
+        "default": "./esm/stylis-rtl.js"
+      },
+      "require": {
+        "types": "./cjs/stylis-rtl.d.ts",
+        "default": "./cjs/stylis-rtl.js"
+      }
+    }
+  },
   "scripts": {
-    "build": "tsc && tsc --module commonjs --outDir dist/cjs",
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\": \"module\"}' > esm/package.json",
+    "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > cjs/package.json",
     "prepublishOnly": "yarn build",
     "test": "jest"
   },
   "files": [
-    "dist",
-    "types"
+    "esm",
+    "cjs"
   ],
   "repository": {
     "type": "git",
@@ -41,15 +56,16 @@
     "stylis": "4.x"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/stylis": "^4.0.2",
-    "jest": "^27.3.1",
-    "prettier": "^2.4.1",
-    "stylis": "^4.0.13",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "@types/jest": "^29.5.12",
+    "@types/stylis": "^4.2.6",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "stylis": "^4.3.4",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
-    "cssjanus": "^2.0.1"
-  }
+    "cssjanus": "^2.3.0"
+  },
+  "packageManager": "yarn@4.4.1"
 }
