--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\": \"module\"}' > esm/package.json",
     "build:cjs": "tsc -p tsconfig.cjs.json && echo '{\"type\": \"commonjs\"}' > cjs/package.json",
     "prepublishOnly": "yarn build",
+    "prepack": "yarn build",
     "test": "jest"
   },
   "files": [
